--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!-- Basic SEO -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrandCraft Studio – Brand Marketing & UX Design</title>
+  <title>BrandAero Studio – Brand Marketing & UX Design</title>
   <meta name="description" content="BrandCraft Studio helps startups and growing brands with strategic brand marketing, UX design, and SEO-friendly digital experiences. Book a consultation today." />
 
   <!-- Open Graph / Social -->
