--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <!-- Basic SEO -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BrandAero Studio – Brand Marketing & UX Design</title>
-  <meta name="description" content="BrandCraft Studio helps startups and growing brands with strategic brand marketing, UX design, and SEO-friendly digital experiences. Book a consultation today." />
+  <title>Brandaero – Brand Marketing & UX Design</title>
+  <meta name="description" content="Brandaero helps startups and growing brands with strategic brand marketing, UX design, and SEO-friendly digital experiences. Book a consultation today." />
 
   <!-- Open Graph / Social -->
-  <meta property="og:title" content="BrandCraft Studio – Brand Marketing & UX Design" />
+  <meta property="og:title" content="Brandaero – Brand Marketing & UX Design" />
   <meta property="og:description" content="Strategic brand marketing, UX design and SEO content that turns clicks into clients. Book a strategy session today." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://yourdomain.com" />
@@ -19,7 +19,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "BrandCraft Studio",
+    "name": "Brandaero",
     "url": "https://yourdomain.com",
     "logo": "https://yourdomain.com/logo.png",
     "sameAs": [
@@ -794,7 +794,7 @@
       <div class="nav-left">
         <div class="logo-mark" aria-hidden="true">B</div>
         <div class="logo-text">
-          <strong>BrandCraft Studio</strong>
+          <strong>Brandaero</strong>
           <span>Brand Marketing · UX Design</span>
         </div>
       </div>
@@ -995,11 +995,11 @@
         </div>
 
         <aside class="seo-snippet" aria-label="Example Google search snippet">
-          <p class="seo-snippet-url">brandcraftstudio.com › services › ux-brand-seo</p>
+          <p class="seo-snippet-url">brandaero.com › services › ux-brand-seo</p>
           <p class="seo-snippet-title">Brand marketing & UX design studio for growing businesses</p>
           <p class="seo-snippet-extra">You visited this page · 2 days ago · ★★★★★ Rating</p>
           <p class="seo-snippet-desc">
-            <span>BrandCraft Studio combines brand strategy, UX design and SEO-friendly content to help you turn website visitors into qualified leads. Book a free 20-minute discovery call.</span>
+            <span>Brandaero combines brand strategy, UX design and SEO-friendly content to help you turn website visitors into qualified leads. Book a free 20-minute discovery call.</span>
           </p>
         </aside>
       </div>
@@ -1034,7 +1034,7 @@
 
             <div class="field-group">
               <label for="company">Brand / Company</label>
-              <input type="text" id="company" name="company" placeholder="BrandCraft, Studio, etc." />
+              <input type="text" id="company" name="company" placeholder="Brandaero, Studio, etc." />
             </div>
 
             <div class="field-inline">
@@ -1166,7 +1166,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer-inner">
-        <p>© <span id="year"></span> BrandCraft Studio. All rights reserved.</p>
+        <p>© <span id="year"></span> Brandaero. All rights reserved.</p>
         <div class="footer-links">
           <a href="#top">Back to top ↑</a>
           <a href="mailto:hello@yourdomain.com">Email</a>
