--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     "url": "https://yourdomain.com",
     "logo": "https://yourdomain.com/logo.png",
     "sameAs": [
-      "https://www.linkedin.com/in/your-profile",
+      "www.linkedin.com/in/ayan-parui-511b76304",
       "https://x.com/your-handle"
     ]
   }
