--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <!-- Basic SEO -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Brandaero – Brand Marketing & UX Design</title>
-  <meta name="description" content="Brandaero helps startups and growing brands with strategic brand marketing, UX design, and SEO-friendly digital experiences. Book a consultation today." />
+  <title>BrandAero – Brand Marketing & UX Design</title>
+  <meta name="description" content="BrandAero helps startups and growing brands with strategic brand marketing, UX design, and SEO-friendly digital experiences. Book a consultation today." />
 
   <!-- Open Graph / Social -->
-  <meta property="og:title" content="Brandaero – Brand Marketing & UX Design" />
+  <meta property="og:title" content="BrandAero – Brand Marketing & UX Design" />
   <meta property="og:description" content="Strategic brand marketing, UX design and SEO content that turns clicks into clients. Book a strategy session today." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://yourdomain.com" />
@@ -19,7 +19,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "Brandaero",
+    "name": "BrandAero",
     "url": "https://yourdomain.com",
     "logo": "https://yourdomain.com/logo.png",
     "sameAs": [
@@ -995,7 +995,7 @@
         </div>
 
         <aside class="seo-snippet" aria-label="Example Google search snippet">
-          <p class="seo-snippet-url">brandaero.com › services › ux-brand-seo</p>
+          <p class="seo-snippet-url">brandAero.com › services › ux-brand-seo</p>
           <p class="seo-snippet-title">Brand marketing & UX design studio for growing businesses</p>
           <p class="seo-snippet-extra">You visited this page · 2 days ago · ★★★★★ Rating</p>
           <p class="seo-snippet-desc">
