--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta property="og:title" content="BrandAero – Brand Marketing & UX Design" />
   <meta property="og:description" content="Strategic brand marketing, UX design and SEO content that turns clicks into clients. Book a strategy session today." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com" />
-  <meta property="og:image" content="https://yourdomain.com/og-image.jpg" />
+  <meta property="og:url" content="https://brandaero.in" />
+  <meta property="og:image" content="https://brandaero.in/og-image.jpg" />
 
   <!-- Schema.org JSON-LD (basic Organization + Website) -->
   <script type="application/ld+json">
@@ -20,10 +20,10 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "BrandAero",
-    "url": "https://yourdomain.com",
-    "logo": "https://yourdomain.com/logo.png",
+    "url": "https://brandaero.in",
+    "logo": "https://brandaero.in/logo.png",
     "sameAs": [
-      "www.linkedin.com/in/ayan-parui-511b76304",
+      "https://www.linkedin.com/in/ayan-parui-511b76304",
       "https://x.com/your-handle"
     ]
   }
@@ -794,7 +794,7 @@
       <div class="nav-left">
         <div class="logo-mark" aria-hidden="true">B</div>
         <div class="logo-text">
-          <strong>Brandaero</strong>
+          <strong>BrandAero</strong>
           <span>Brand Marketing · UX Design</span>
         </div>
       </div>
@@ -995,11 +995,11 @@
         </div>
 
         <aside class="seo-snippet" aria-label="Example Google search snippet">
-          <p class="seo-snippet-url">brandAero.com › services › ux-brand-seo</p>
+          <p class="seo-snippet-url">brandaero.in › services › ux-brand-seo</p>
           <p class="seo-snippet-title">Brand marketing & UX design studio for growing businesses</p>
           <p class="seo-snippet-extra">You visited this page · 2 days ago · ★★★★★ Rating</p>
           <p class="seo-snippet-desc">
-            <span>Brandaero combines brand strategy, UX design and SEO-friendly content to help you turn website visitors into qualified leads. Book a free 20-minute discovery call.</span>
+            <span>BrandAero combines brand strategy, UX design and SEO-friendly content to help you turn website visitors into qualified leads. Book a free 20-minute discovery call.</span>
           </p>
         </aside>
       </div>
@@ -1034,7 +1034,7 @@
 
             <div class="field-group">
               <label for="company">Brand / Company</label>
-              <input type="text" id="company" name="company" placeholder="Brandaero, Studio, etc." />
+              <input type="text" id="company" name="company" placeholder="BrandAero, Studio, etc." />
             </div>
 
             <div class="field-inline">
@@ -1166,12 +1166,12 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer-inner">
-        <p>© <span id="year"></span> Brandaero. All rights reserved.</p>
+        <p>© <span id="year"></span> BrandAero. All rights reserved.</p>
         <div class="footer-links">
           <a href="#top">Back to top ↑</a>
-          <a href="mailto:hello@yourdomain.com">Email</a>
-          <a href="#" aria-label="LinkedIn profile">LinkedIn</a>
-          <a href="#" aria-label="X (Twitter) profile">X</a>
+          <a href="mailto:hello@brandaero.in">Email</a>
+          <a href="https://www.linkedin.com/in/ayan-parui-511b76304" aria-label="LinkedIn profile">LinkedIn</a>
+          <a href="https://x.com/your-handle" aria-label="X (Twitter) profile">X</a>
         </div>
       </div>
     </footer>
