--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>BrandAero – Currently Under Service</title>
 
   <!-- Basic SEO -->
-  <meta name="description" content="BrandAero is currently under service. In the meantime, connect with us on Instagram and LinkedIn." />
+  <meta name="description" content="BrandAero is currently under service. Connect with us on Instagram and LinkedIn." />
   <link rel="canonical" href="https://brandaero.in/" />
 
   <style>
@@ -14,7 +14,6 @@
       --bg: #050816;
       --card: #0f172a;
       --accent: #38bdf8;
-      --accent-soft: rgba(56, 189, 248, 0.2);
       --text: #e5e7eb;
       --muted: #9ca3af;
     }
@@ -23,49 +22,79 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      font-family: system-ui, "Inter", sans-serif;
     }
 
     body {
       min-height: 100vh;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Inter", sans-serif;
-      background:
-        radial-gradient(circle at top, #1e293b 0, transparent 55%),
-        radial-gradient(circle at bottom, #0b1120 0, #020617 55%);
+      background: #050816;
       color: var(--text);
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 1.5rem;
+      overflow: hidden;
+      position: relative;
+      isolation: isolate;
     }
 
+    /* 🔥 Floating Gradient Background Animation */
+    .bg-animation {
+      position: absolute;
+      inset: 0;
+      overflow: hidden;
+      z-index: -1;
+    }
+
+    .orb {
+      position: absolute;
+      width: 420px;
+      height: 420px;
+      border-radius: 50%;
+      filter: blur(130px);
+      opacity: 0.55;
+      animation: float 12s infinite ease-in-out alternate;
+    }
+
+    .orb1 {
+      background: #38bdf8;
+      top: -90px;
+      left: -100px;
+      animation-delay: 0s;
+    }
+
+    .orb2 {
+      background: #a855f7;
+      bottom: -120px;
+      right: -120px;
+      animation-delay: 2s;
+    }
+
+    .orb3 {
+      background: #0ea5e9;
+      top: 40%;
+      left: 60%;
+      width: 300px;
+      height: 300px;
+      opacity: 0.4;
+      animation-delay: 4s;
+    }
+
+    @keyframes float {
+      0% { transform: translate(0, 0) scale(1); }
+      100% { transform: translate(80px, -60px) scale(1.3); }
+    }
+
+    /* CARD DESIGN */
     .card {
       width: 100%;
       max-width: 540px;
-      background: linear-gradient(135deg, rgba(15, 23, 42, 0.96), rgba(15, 23, 42, 0.9));
+      background: rgba(15, 23, 42, 0.8);
+      backdrop-filter: blur(14px);
       border-radius: 24px;
       padding: 2.2rem 2rem 2.4rem;
       border: 1px solid rgba(148, 163, 184, 0.25);
-      box-shadow:
-        0 24px 80px rgba(15, 23, 42, 0.8),
-        0 0 0 1px rgba(15, 23, 42, 0.8);
       position: relative;
-      overflow: hidden;
-    }
-
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: -40%;
-      background:
-        radial-gradient(circle at 0 0, var(--accent-soft), transparent 55%),
-        radial-gradient(circle at 100% 0, rgba(94, 234, 212, 0.18), transparent 55%);
-      opacity: 0.8;
-      pointer-events: none;
-    }
-
-    .card-inner {
-      position: relative;
-      z-index: 1;
     }
 
     .badge {
@@ -107,7 +136,6 @@
     .subtitle {
       color: var(--muted);
       font-size: 0.98rem;
-      max-width: 34rem;
       margin-bottom: 1.6rem;
     }
 
@@ -121,31 +149,23 @@
       color: #cbd5f5;
     }
 
-    .highlight-box strong {
-      color: var(--accent);
-      font-weight: 600;
-    }
-
     .cta-row {
       display: flex;
-      flex-wrap: wrap;
       gap: 0.8rem;
       margin-bottom: 1.1rem;
+      flex-wrap: wrap;
     }
 
     .btn {
       display: inline-flex;
       align-items: center;
-      justify-content: center;
       gap: 0.4rem;
       padding: 0.65rem 1.3rem;
       border-radius: 999px;
-      border: 1px solid transparent;
       font-size: 0.92rem;
-      cursor: pointer;
       text-decoration: none;
-      transition: transform 0.12s ease, box-shadow 0.12s ease, background 0.15s ease,
-        border-color 0.15s ease, color 0.15s ease;
+      cursor: pointer;
+      transition: 0.2s;
       white-space: nowrap;
     }
 
@@ -162,9 +182,8 @@
     }
 
     .btn-outline {
-      background: transparent;
+      border: 1px solid rgba(148, 163, 184, 0.65);
       color: #e5e7eb;
-      border-color: rgba(148, 163, 184, 0.65);
     }
 
     .btn-outline:hover {
@@ -173,89 +192,53 @@
       transform: translateY(-1px);
     }
 
-    .btn-icon {
-      font-size: 1.05rem;
-    }
-
     .note {
       font-size: 0.78rem;
       color: var(--muted);
     }
 
-    .note span {
-      color: var(--accent);
-    }
-
     @media (max-width: 480px) {
-      .card {
-        padding: 1.6rem 1.3rem 1.7rem;
-        border-radius: 20px;
-      }
-
-      .cta-row {
-        flex-direction: column;
-        align-items: stretch;
-      }
-
-      .btn {
-        width: 100%;
-        justify-content: center;
-      }
-
-      .subtitle {
-        font-size: 0.9rem;
-      }
+      .cta-row { flex-direction: column; }
+      .btn { width: 100%; justify-content: center; }
     }
   </style>
 </head>
+
 <body>
+
+  <!-- 🔥 Animated Gradient BG Layer -->
+  <div class="bg-animation">
+    <div class="orb orb1"></div>
+    <div class="orb orb2"></div>
+    <div class="orb orb3"></div>
+  </div>
+
+  <!-- Main Card -->
   <main class="card">
-    <div class="card-inner">
-      <div class="badge">
-        <span class="badge-dot"></span>
-        BrandAero Status
-      </div>
-
-      <h1 class="title">
-        BrandAero is <span>currently under service</span>.
-      </h1>
-
-      <p class="subtitle">
-        We’re rebuilding our digital space to match the level of work we deliver. In the meantime, you can still
-        reach out and follow our journey on social platforms.
-      </p>
-
-      <div class="highlight-box">
-        <strong>Quick note:</strong> Projects, collaborations, and conversations are still open. Use the links below
-        to connect with Ayan directly.
-      </div>
-
-      <div class="cta-row">
-        <a
-          class="btn btn-primary"
-          href="https://instagram.com/ayanrnix"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <span class="btn-icon">📷</span>
-          <span>Connect on Instagram</span>
-        </a>
-
-        <a
-          class="btn btn-outline"
-          href="https://www.linkedin.com/in/ayan-parui-511b76304/"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <span class="btn-icon">💼</span>
-          <span>Connect on LinkedIn</span>
-        </a>
-      </div>
-
-      <p class="note">
-        Temporary holding page for <span>brandaero.in</span>. Full experience coming soon.
-      </p>
+    <div class="badge">
+      <span class="badge-dot"></span>
+      BrandAero Status
     </div>
+
+    <h1 class="title">
+      BrandAero is <span>currently under service</span>.
+    </h1>
+
+    <p class="subtitle">
+      We're rebuilding our digital presence. Meanwhile, stay connected with us for updates.
+    </p>
+
+    <div class="highlight-box">
+      <strong>Note:</strong> Brand inquiries, collaborations, and conversations are still open.
+    </div>
+
+    <div class="cta-row">
+      <a class="btn btn-primary" href="https://instagram.com/ayanrnix" target="_blank">📷 Instagram</a>
+      <a class="btn btn-outline" href="https://www.linkedin.com/in/ayan-parui-511b76304/" target="_blank">💼 LinkedIn</a>
+    </div>
+
+    <p class="note">Temporary page for <strong>brandaero.in</strong>. Full experience coming soon.</p>
   </main>
+
 </body>
 </html>
