--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <span class="btn-icon">💼</span>
+          <span class=<i class="fa-brands fa-instagram"></i>
           <span>Connect on LinkedIn</span>
         </a>
       </div>
