--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <span class="btn-icon">📷</span>
+          <span <i class="fa-brands fa-instagram"></i></span>
           <span>Connect on Instagram</span>
         </a>
 
