--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="description" content="BrandAero is currently under service. In the meantime, connect with us on Instagram and LinkedIn." />
   <link rel="canonical" href="https://brandaero.in/" />
 
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     :root {
       --bg: #050816;
@@ -140,41 +143,40 @@
       gap: 0.4rem;
       padding: 0.65rem 1.3rem;
       border-radius: 999px;
-      border: 1px solid transparent;
+      border: none;
       font-size: 0.92rem;
       cursor: pointer;
       text-decoration: none;
-      transition: transform 0.12s ease, box-shadow 0.12s ease, background 0.15s ease,
-        border-color 0.15s ease, color 0.15s ease;
+      transition: transform 0.12s ease, box-shadow 0.12s ease;
       white-space: nowrap;
-    }
-
-    .btn-primary {
-      background: radial-gradient(circle at 0 0, #38bdf8, #2563eb);
-      color: #0b1120;
       font-weight: 600;
-      box-shadow: 0 14px 45px rgba(56, 189, 248, 0.45);
+      color: #fff;
     }
 
-    .btn-primary:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 18px 60px rgba(56, 189, 248, 0.55);
+    /* Instagram gradient button */
+    .btn-instagram {
+      background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+      box-shadow: 0 14px 35px rgba(214, 41, 118, 0.45);
     }
 
-    .btn-outline {
-      background: transparent;
-      color: #e5e7eb;
-      border-color: rgba(148, 163, 184, 0.65);
+    .btn-instagram:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 18px 55px rgba(214, 41, 118, 0.6);
     }
 
-    .btn-outline:hover {
-      border-color: var(--accent);
-      background: rgba(15, 23, 42, 0.9);
-      transform: translateY(-1px);
+    /* LinkedIn button */
+    .btn-linkedin {
+      background: #0077b5;
+      box-shadow: 0 14px 35px rgba(0, 119, 181, 0.45);
     }
 
-    .btn-icon {
-      font-size: 1.05rem;
+    .btn-linkedin:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 18px 55px rgba(0, 119, 181, 0.6);
+    }
+
+    .btn-icon i {
+      font-size: 1.1rem;
     }
 
     .note {
@@ -199,7 +201,6 @@
 
       .btn {
         width: 100%;
-        justify-content: center;
       }
 
       .subtitle {
@@ -231,23 +232,25 @@
       </div>
 
       <div class="cta-row">
+        <!-- Instagram -->
         <a
-          class="btn btn-primary"
+          class="btn btn-instagram"
           href="https://instagram.com/ayanrnix"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <span <i class="fa-brands fa-instagram"></i></span>
+          <span class="btn-icon"><i class="fa-brands fa-instagram"></i></span>
           <span>Connect on Instagram</span>
         </a>
 
+        <!-- LinkedIn -->
         <a
-          class="btn btn-outline"
+          class="btn btn-linkedin"
           href="https://www.linkedin.com/in/ayan-parui-511b76304/"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <span class=<i class="fa-brands fa-instagram"></i>
+          <span class="btn-icon"><i class="fa-brands fa-linkedin"></i></span>
           <span>Connect on LinkedIn</span>
         </a>
       </div>
